--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-    </head>
-    <body>
-        <h1>hello</h1>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy for Bajeti</title>
+</head>
+<body>
+    <h1>Privacy Policy for Bajeti</h1>
+    <p><strong>Effective Date:</strong> 9 October 2024</p>
+
+    <h2>Introduction</h2>
+    <p>Bajeti (“we”, “our”, or “us”) is committed to protecting your privacy. This Privacy Policy explains how we handle your information when you use our budget tracker mobile application, Bajeti (the “App”). By using the Bajeti App, you agree to the terms outlined in this Privacy Policy.</p>
+
+    <h2>1. Information We Do Not Collect</h2>
+    <p>Bajeti does not collect, store, or process any personal information. Since there is no authentication in the Bajeti App, we do not ask for or collect any data such as your name, email address, phone number, or any other identifiable information.</p>
+
+    <h2>2. Offline Use</h2>
+    <p>The Bajeti App is designed to operate entirely offline. All data generated within the app remains on your device, and we do not transmit or share any of your data with external servers or third parties.</p>
+
+    <h2>3. SMS Permissions</h2>
+    <p>With your permission, the Bajeti App may read SMS messages on your device to automatically detect and categorize financial transactions for budgeting purposes. This functionality is optional and requires user consent. Bajeti only accesses SMS messages directly relevant to the App’s purpose of budgeting and does not share this information.</p>
+
+    <h2>4. Security of Your Information</h2>
+    <p>All data handled by the Bajeti App remains locally on your device. We have implemented features to ensure that only you have access to your financial data. Since the App operates offline, your data is not exposed to network security risks.</p>
+
+    <h2>5. Your Rights</h2>
+    <p>Because Bajeti does not collect or store personal data, there is no information to access, modify, or delete through the App. You control all your data directly on your device.</p>
+
+    <h2>6. Changes to This Privacy Policy</h2>
+    <p>We may update this Privacy Policy from time to time. We will update the “Effective Date” at the top of this Privacy Policy to reflect the date of the most recent changes. We encourage you to review this Privacy Policy periodically.</p>
+
+    <h2>7. Contact Us</h2>
+    <p>If you have any questions or concerns about this Privacy Policy, you can contact us at:</p>
+    <p>
+        Nubian Technology<br>
+        Email: <a href="mailto:imo.muganda21@gmail.com">imo.muganda21@gmail.com</a><br>
+        Address: Nairobi, Kenya
+    </p>
+</body>
 </html>
